adding bulma css

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,3 +1,35 @@
-<h1>Classic Radios</h1>
-<h2>Vintage radios repaired by hand</h2>
-<p>All of these radios have been part of John's private collection and over the years he's repaired them to good working order at his home in East Sussex.</p>
+<div class="container is-fluid">
+  <div class="columns">
+  <div class="column">
+
+  </div>
+  <div class="column is-8">
+    <br /><br />
+    <h1 class="title is-2">Classic Radios</h1>
+    <h2 class="subtitle is-3">Vintage Radios Repaired by Hand</h2>
+    <p>
+      All of these radios have been part of John's private collection and over the years he's repaired them to good working order at his home in East Sussex.
+    </p>
+    <br /><br />
+    <br /><br />
+    <h2 class="subtitle is-3">Radios in Working Order</h2>
+    <p>
+      Each radio is in full working order, so not only will the radio make a nice vintage style piece in your home or business, but you can also listen to the warm, full tones of analogue radio.
+    </p>
+    <br />
+    <p>
+      Whilst the radios are currently working, it must be born in mind they are over 50 years old and are somewhat delicate. As a consequence they will be provided on a 'Sold as Seen' basis.  You are of course very welcome to come and listen to them in person.
+    </p>
+    <br />
+
+    <p>
+      If you have any questions or comments, please feel free to leave us a message via the form.
+    </p>
+    <br /><br />
+  </div>
+
+<div class="column">
+
+</div>
+</div>
+</div>
